--- a/config/dropbox.yml
+++ b/config/dropbox.yml
@@ -1,6 +1,6 @@
 app_key: "ysd2zk52ovikb7k"
 app_secret: "m9whmdkhaxbcv2g"
-access_token: "e5t164h8cfow7c96"
-access_token_secret: "miqe50je99sgb05"
+access_token: "46rwiuuyjq4kv4mp"
+access_token_secret: "c69c5gzuoawbzg8"
 user_id: "208933943"
 access_type: "dropbox"
